part-4/0-namespaces.yml
--- # Backend
apiVersion: v1
kind: Namespace
metadata:
  name: backend
--- # Frontend
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
